# Security-Project

./: .coverage  LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml
docs/implementation_report/: implementation_report.md
docs/specification_report/: secification_report.md
docs/test_report/: test_report.md
docs/week_reports/: week_five.md  week_four.md  week_one.md  week_six.md  week_three.md  week_two.md
src/: key_generation.py  main.py  utils.py
src/crypt/: decryption.py  encryption.py
src/keys/: key_generation.py
src/tests/: test_decryption.py  test_encryption.py  test_key_generation.py  test_utils.py
src/util_functions/: primes.py  utils.py
