[tool.poetry]
name = "security-project"
version = "0.1.0"
description = ""
authors = ["tukkimiesjonni <tukkimiesjonni@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^3.3.5"
pyfiglet = "^1.0.2"
coverage = "^7.7.1"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
